# Spindleloom

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENT-AUTHORING.md  AI-2026-TRENDS-AND-COVERAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LOOPWRIGHT.md  ONBOARDING.md  PILOT-PLAN.md  PROJECT-OVERVIEW.md  README.md  SPEC-KIT-CROSSWALK.md  STORY-CRAFT.md  for-everyone.html  how-to-use.html  project-overview.html  pyproject.toml  wheelwright-agent-fleet.html
.claude/: .gitignore
.claude-plugin/: marketplace.json
.wheelwright/: context.db
agents/: HELP.md  INDEX.md  accessibility-auditor.md  adr-writer.md  ai-eval.md  ai-orchestration.md  ai-orchestrator.md  api-designer.md  architect.md  backend-developer.md  backlog-manager.md  brd-writer.md  bug-triager.md  change-verifier.md  ci-cd-pipeline.md  code-reviewer.md  coding-standards-writer.md  coding-standards.md  data-modeler.md  debugger.md  dev-onboarding.md  doc-strategy-advisor.md  estimation-facilitator.md  feature-docs-writer.md  flaky-test-detective.md  frd-writer.md  frontend-developer.md  incident-postmortem.md  incident-responder.md  mrd-writer.md  performance-engineer.md  pipeline-engineer.md  pr-author.md  prd-writer.md  product-analytics.md  qa-tester.md  raid-keeper.md  raid-log.md  release-manager.md  retrospective-facilitator.md  (+23 more)
commands/: help-role.md  ops-raid.md  plan-retro.md  rfc.md  run.md  spec-analyze.md  tech-debt.md  test-plan.md
from other projects/: PILOT-READOUT.md
hooks/: HOOKS.md  add_examples.py  azure_boards_adapter.py  build_agent_index.py  build_context_pack.py  build_fleet_page.py  build_governance_handbook.py  build_help.py  (+32 more)
(+627 files in other folders)
