[project]
name = "spindleloom"
version = "0.1.0"
description = "Spindleloom — SDLC agent fleet, traceability MCP server, and the Shipwright generator."
requires-python = ">=3.10"
# No runtime dependencies on purpose: rtm_core, the validator, and the Shipwright
# generator are stdlib-only, and the shipped MCP server self-provisions its one
# dependency at launch via `uv run --with "mcp[cli]"` (see hooks/build_harness_artifacts.py).
dependencies = [
    "chromadb>=1.5.9",
]

# Dev/test loop only. uv installs the `dev` group by default, so `uv run python
# hooks/test_mcp_server.py` (and `uv run mcp dev …`) get the MCP SDK with no extra flags.
[dependency-groups]
dev = ["mcp[cli]>=1.2"]
