[project]
name = "spindleloom"
version = "0.4.0"
description = "Spindleloom — SDLC agent fleet, traceability MCP server, and the harness generator."
requires-python = ">=3.10"
# No required runtime dependencies: rtm_core, the validator, and the harness
# generator are stdlib-only, and the shipped MCP server self-provisions its one
# dependency at launch via `uv run --with "mcp[cli]"` (see hooks/build_harness_artifacts.py).
# ChromaDB powers the OPTIONAL semantic context search (SPINDLELOOM_SEMANTIC=1) —
# install via the `semantic` extra.
dependencies = []

[project.optional-dependencies]
semantic = ["chromadb>=1.5.9"]

# Dev/test loop only. uv installs the `dev` group by default, so `uv run python
# hooks/test_mcp_server.py` (and `uv run mcp dev …`) get the MCP SDK with no extra flags.
[dependency-groups]
dev = ["mcp[cli]>=1.2"]
